[build-system]
requires = ["poetry-core>=1.2.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crab-framework"
version = "0.1.2"
description = "Cross-platform Agent Benchmark for Multimodal Embodied Language Model Agents."

authors = ["CAMEL-AI.org"]
maintainers = ["Tianqi Xu <tianqi.xu@kaust.edu.sa>"]

packages = [{ include = "crab" }]

readme = "README.md"
license = "Apache License 2.0"
repository = "https://github.com/camel-ai/crab"

[tool.poetry.dependencies]
python = "^3.10, <3.12"

[tool.poetry.extras]
server = ["fastapi", "pydantic-settings", "uvicorn"]
client = [
    "httpx",
    "openai",
    "google-generativeai",
    "anthropic",
    "groq",
    "ollama",
    "easyocr",
    "plotly",
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "transformers",
    "addict",
    "yapf",
    "matplotlib",
    "pycocotools",
    "timm",
]
camel = ["camel-ai"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
ruff = "^0.6.5"
ipykernel = "^6.29.3"
pandas = "^2.2.2"
sphinx = "^7"
myst-parser = "^4"
sphinx-book-theme = "*"
pre-commit = "^3.7.0"
certifi = "^2024.2.2"

[tool.ruff]
lint.select = ["E501", "E4", "E7", "E9", "F", "I"]
lint.ignore = ["E731"]
exclude = ["docs/"]

[[tool.mypy.overrides]]
module = ["dill", "easyocr", "google.generativeai.*"]
ignore_missing_imports = true
